--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
         </div><!-- nav -->
 </div><!-- header -->
 <ul data-role="listview" data-theme="a">
-    <li><a href="#">Home</a> </li>
+    <li><a href="index.html">Home</a> </li>
     <li><a href="shop.html">Shop</a> </li>
-    <li><a href="contact.html">Contact</a> </li>
+    <li><a href="#">Contact</a> </li>
 
 </ul>
 
