--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
+<div data-role="page" id="home" >
 <div class="header" data-role="header" data-theme="b">
     <div class="nav" data-role="controlgroup" >
         <div class="ui-grid-b" >
@@ -25,9 +25,10 @@
         </div><!-- nav -->
 </div><!-- header -->
 <ul data-role="listview" data-theme="a">
-    <li><a href="index.html">Home</a> </li>
-    <li><a href="shop.html">Shop</a> </li>
-    <li><a href="#">Contact</a> </li>
+    <li><a href="#home">Home</a> </li>
+    <li><a href="#shop">Shop</a> </li>
+    <li><a href="#contact">Contact</a> </li>
+    <li><a href="#locatie">Locatie</a> </li>
 
 </ul>
 
@@ -53,7 +54,10 @@ data-theme="b">Welkom op de Politieshop.nl!</li>
     </div>
 
 </div>
-
+    </div>
+<div data-role="page" id="shop" >
+    test
+    </div>
 
 
 
