--- a/index.html
+++ b/index.html
@@ -7,56 +7,204 @@
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <!-- Include the jQuery library -->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/gmap.js"></script>
     <!-- Include the jQuery Mobile library -->
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+<div data-role="page" id="home" >
+    <div class="header" data-role="header" data-theme="b">
+        <div class="nav" data-role="controlgroup" >
+            <div class="ui-grid-b" >
+                <div align="center">
 
-<div class="header" data-role="header" data-theme="b">
-    <div class="nav" data-role="controlgroup" >
-        <div class="ui-grid-b" >
-           <div align="center">
-           
-                <img src="images/logo.png"/>
-            
-            </div>
+                    <img src="images/logo.png"/>
+
+                </div>
             </div> <!-- /grid-b-->
         </div><!-- nav -->
-</div><!-- header -->
-<ul data-role="listview" data-theme="a">
-    <li><a href="#">Home</a> </li>
-    <li><a href="shop.html">Shop</a> </li>
-    <li><a href="contact.html">Contact</a> </li>
+    </div><!-- header -->
+    <ul data-role="listview" data-theme="a">
+        <li><a href="#home">Home</a> </li>
+        <li><a href="#shop">Shop</a> </li>
+        <li><a href="#contact">Contact</a> </li>
+        <li><a href="#locatie">Locatie</a> </li>
 
-</ul>
-
-
-<div data-role="content" class="content" id="lastminutecontent"><br>
-<ul data-role="listview">
-<li id="pop" data-role="listdivider"
-data-theme="b">Welkom op de Politieshop.nl!</li>
+    </ul>
 
 
-
-       Welkom op de webshop van de politie! Hier kunt u verschillende producten kopen waaronder Politie petjes, pennen, jassen en fluiten. Neem snel een kijkje in onze webshop en sta versteld!
+    <div data-role="content" class="content" id="lastminutecontent"><br>
+        <ul data-role="listview">
+            <li id="pop" data-role="listdivider"
+                data-theme="b">Welkom op de Politieshop.nl!</li>
 
 
 
+            Welkom op de webshop van de politie! Hier kunt u verschillende producten kopen waaronder Politie petjes, pennen, jassen en fluiten. Neem snel een kijkje in onze webshop en sta versteld!
 
 
-</ul>
-</div>
-<div class="footer3">
-<div class="footer2" data-role="footer" data-theme="b">
-   Gemaakt door Arjen Froma en Dylan Hermanni
+
+
+
+        </ul>
     </div>
+    <div class="footer3">
+        <div class="footer2" data-role="footer" data-theme="b">
+            Gemaakt door Arjen Froma en Dylan Hermanni
+        </div>
 
+    </div>
+</div>
+<div data-role="page" id="shop" >
+    <div class="header" data-role="header" data-theme="b">
+        <div class="nav" data-role="controlgroup" >
+            <div class="ui-grid-b" >
+                <div align="center">
+
+                    <img src="images/logo.png"/>
+
+                </div>
+            </div> <!-- /grid-b-->
+        </div><!-- nav -->
+    </div><!-- header -->
+    <ul data-role="listview" data-theme="a">
+        <li><a href="#home">Home</a> </li>
+        <li><a href="#shop">Shop</a> </li>
+        <li><a href="#contact">Contact</a> </li>
+        <li><a href="#locatie">Locatie</a> </li>
+
+    </ul>
+
+
+    <div data-role="content" class="content" id="lastminutecontent"><br>
+        <ul data-role="listview">
+            <li id="pop" data-role="listdivider"
+                data-theme="b">Webshop</li>
+Hier vind u alle producten die wij verkopen! Momenteel krijgen wij zoveel bezoekers op een dag dat veel van onze spullen snel zijn uitverkocht! Wees er dus snel bij als u belang bij een van onze producten hebt.
+            <div class="footer3"></div> <li id="pop" data-role="listdivider"
+                data-theme="b">Politie Badge</li>
+<div align="center"> <img height="10%" width="10%" src="images/handtas.png"><br>
+            <h3>Uitverkocht</h3></div>
+    <li id="pop" data-role="listdivider"
+        data-theme="b">Politie Pet</li>
+    <div align="center"> <img height="10%" width="10%" src="images/pet.jpg"><br>
+        <h3>Uitverkocht</h3></div>
+
+        <li id="pop" data-role="listdivider"
+            data-theme="b">Politie Knuppel</li>
+        <div align="center"> <img height="10%" width="10%" src="images/knuppel.jpg"><br>
+            <h3>Uitverkocht</h3></div>
+
+
+
+
+        </ul>
+    </div>
+    <div class="footer3">
+        <div class="footer2" data-role="footer" data-theme="b">
+            Gemaakt door Arjen Froma en Dylan Hermanni
+        </div>
+
+    </div>
 </div>
 
+<div data-role="page" id="contact" >
+    <div class="header" data-role="header" data-theme="b">
+        <div class="nav" data-role="controlgroup" >
+            <div class="ui-grid-b" >
+                <div align="center">
+
+                    <img src="images/logo.png"/>
+
+                </div>
+            </div> <!-- /grid-b-->
+        </div><!-- nav -->
+    </div><!-- header -->
+    <ul data-role="listview" data-theme="a">
+        <li><a href="#home">Home</a> </li>
+        <li><a href="#shop">Shop</a> </li>
+        <li><a href="#contact">Contact</a> </li>
+        <li><a href="#locatie">Locatie</a> </li>
+
+    </ul>
+
+
+    <div data-role="content" class="content" id="lastminutecontent"><br>
+        <ul data-role="listview">
+            <li id="pop" data-role="listdivider"
+                data-theme="b">Neem contact met ons op</li>
 
 
 
+            <form method="post" action="/action_page_post.php">
+                <label for="fname"><b>Volledige naam:</b></label>
+                <input type="text" name="fname1" id="fname">
+                <label for="geslagt"><b>Geslacht:</b></label>
+                <select id="geslagt" name="geslagt">
+                    <option value="red">Man</option>
+                    <option value="green">Vrouw</option>
+                    <option value="blue">Weet ik nog niet</option>
+                </select>
+                <label for="emaile"><b>Email:</b></label>
+                <input type="email" name="fname2" id="emaile">
+                <label for="textt"><b>Uw bericht</b></label>
+                <textarea  name="fname" id="textt"></textarea>
+                <input type="button" value="Vestuur contact formulier">
+            </form>
+
+
+
+
+        </ul>
+    </div>
+    <div class="footer3">
+        <div class="footer2" data-role="footer" data-theme="b">
+            Gemaakt door Arjen Froma en Dylan Hermanni
+        </div>
+
+    </div>
+</div>
+
+<div data-role="page" id="locatie" >
+    <div class="header" data-role="header" data-theme="b">
+        <div class="nav" data-role="controlgroup" >
+            <div class="ui-grid-b" >
+                <div align="center">
+
+                    <img src="images/logo.png"/>
+
+                </div>
+            </div> <!-- /grid-b-->
+        </div><!-- nav -->
+    </div><!-- header -->
+    <ul data-role="listview" data-theme="a">
+        <li><a href="#home">Home</a> </li>
+        <li><a href="#shop">Shop</a> </li>
+        <li><a href="#contact">Contact</a> </li>
+        <li><a href="#locatie">Locatie</a> </li>
+
+    </ul>
+
+
+    <div data-role="content" class="content" id="lastminutecontent"><br>
+        <ul data-role="listview">
+            <li id="pop" data-role="listdivider"
+                data-theme="b">Zie onze locatie</li>
+
+
+            <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:440px;width:100%;'><div id='gmap_canvas' style='height:440px;width:px;'></div><div><small><a href="http://googlemapsgenerator.com/nl/">Embed gratis en eenvoudig een Google Map op je website									Bezoek onze website									Klik hier!</a></small></div><div><small><a href="http://amsterdamdiary.nl/fietshuur-amsterdam/">www.amsterdamdiary.nl/fietshuur-amsterdam</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:10,center:new google.maps.LatLng(53.16870669999998,6.718633599999992),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(53.16870669999998,6.718633599999992)});infowindow = new google.maps.InfoWindow({content:'<strong>PolitieShop.nl</strong><br>foxhol<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+
+
+        </ul>
+    </div>
+    <div class="footer3">
+        <div class="footer2" data-role="footer" data-theme="b">
+            Gemaakt door Arjen Froma en Dylan Hermanni
+        </div>
+
+    </div>
+</div>
 </div>
 </body>
 </html>
